# course-work

./: AUTHORS  CHANGELOG  CMakeLists.txt  CMakePresets.json  README.md  user_guide.adoc
cmake/: yds_add_tbb.cmake  yds_custom_functions.cmake
src/apps/aco/: CMakeLists.txt
src/apps/aco/include/: aco_tests.h  community_detection.h  defines.h  graph.h  solution.h
src/apps/aco/src/: aco_tests.cpp  community_detection.cpp  graph.cpp  main.cpp  solution.cpp
src/common/: CMakeLists.txt  assert_helpers.cpp  assert_helpers.h  generators_helper.cpp  generators_helper.h  log_duration.h  math_helper.h  profiler.h  sanitizer-options.cpp  string_helper.cpp  string_helper.h  tests_helper.h  traits_helper.h
src/contests/: CMakeLists.txt
src/lessons/: CMakeLists.txt
